@@ -77,6 +77,7 @@ Package: neutron-server
 Architecture: all
 Depends: adduser,
          neutron-common (= ${source:Version}),
+         neutron-plugin-agent,
          ${misc:Depends},
          ${python:Depends},
          ${shlibs:Depends},
@@ -277,6 +278,8 @@ Depends: neutron-plugin-ml2 (= ${source:Version}),
          ${misc:Depends},
          ${python:Depends},
          ${shlibs:Depends},
+Provides: neutron-plugin-agent,
+Conflicts: neutron-plugin-agent,
 Breaks: neutron-plugin-openvswitch-agent ( << 2:8.0.0~b2-0ubuntu1~ ),
 Replaces: neutron-plugin-openvswitch-agent ( << 2:8.0.0~b2-0ubuntu1~ ),
 Description: Neutron is a virtual network service for Openstack - Open vSwitch plugin agent
@@ -299,6 +302,8 @@ Depends: bridge-utils,
          ${misc:Depends},
          ${python:Depends},
          ${shlibs:Depends},
+Provides: neutron-plugin-agent,
+Conflicts: neutron-plugin-agent,
 Breaks: quantum-plugin-linuxbirdge-agent ( << 1:2013.2~b2-0ubuntu1~ ),
 Replaces: quantum-plugin-linuxbridge-agent ( << 1:2013.2~b2-0ubuntu1~ ),
 Description: Neutron is a virtual network service for Openstack - linuxbridge plugin agent
