@@ -14,5 +14,8 @@
 DESC="OpenStack Neutron Server"
 PROJECT_NAME=neutron
 NAME=${PROJECT_NAME}-server
-[ -r /etc/default/neutron-server ] && . /etc/default/neutron-server
-[ -r "$NEUTRON_PLUGIN_CONFIG" ] && DAEMON_ARGS="--config-file=$NEUTRON_PLUGIN_CONFIG"
+[ -x /usr/bin/neutron-linuxbridge-agent ] && [ -r /etc/default/neutron-plugin-linuxbridge-agent ] && \
+    . /etc/default/neutron-plugin-linuxbridge-agent
+[ -x /usr/bin/neutron-openvswitch-agent ] && [ -r /etc/default/neutron-openvswitch-agent ] && \
+    . /etc/default/neutron-openvswitch-agent
+[ -n "$NEUTRON_PLUGIN_CONFIG" ] && DAEMON_ARGS="--config-file=$NEUTRON_PLUGIN_CONFIG"
