@@ -25,6 +25,11 @@ neutron (2:8.0.0~b2-0ubuntu1) UNRELEASED; urgency=medium
   * d/control, d/rules, d/neutron-(plugin-)openvswitch-agent*: Rename
     neutron-plugin-openvswitch-agent to neutron-openvswitch-agent
     (LP: #1321257).
+  * d/control, d/neutron-server.*, d/neutron-openvswitch-agent.default,
+    d/neutron-plugin-linuxbridge-agent.default: Add neutron-plugin-agent
+    virtual package, drop neutron-server.default and add corresponding
+    neutron-*-agent.default files with corresponding NEUTRON_PLUGIN_CONFIG
+    values (LP: #1243352).
 
  -- Corey Bryant <corey.bryant@canonical.com>  Thu, 21 Jan 2016 16:21:10 -0500
 
